# aggit

./: .aggitignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  jakefile.toml
pages/: index.html
skills/aggit/: SKILL.md
src/: main.rs
src/gitops/: mod.rs
src/repository/: mod.rs
src/s3ops/: mod.rs
