[package]
name = "aggit"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.129.0", features = ["rt-tokio"] }
anyhow = "1.0.102"
sha1-checked = "0.10.0"
hex = "0.4.3"
flate2 = "1.1.9"
byteorder = "1.5.0"
walkdir = "2"
difflib = "0.4.0"
dirs = "6.0.0"
toml = { version = "1.1.2", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3", features = ["local-offset"] }
