[package]
name = "aggit"
version = "0.2.0-alpha"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/AstraBert/aggit"
description = "S3-backed, git-versioned object storage for agents"
keywords = ["ai", "agents", "git", "s3"]

[dependencies]
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.129.0", features = ["rt-tokio"] }
anyhow = "1.0.102"
sha1-checked = "0.10.0"
hex = "0.4.3"
flate2 = "1.1.9"
byteorder = "1.5.0"
difflib = "0.4.0"
dirs = "6.0.0"
toml = { version = "1.1.2", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3", features = ["local-offset"] }
clap = { version = "4.6.1", features = ["derive"] }
ignore = "0.4.25"
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }

[dev-dependencies]
serial_test = "3.4.0"
